maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: not enough arguments for method min: (a: Int, b: Int)Int.
Unspecified value parameter b.
  return min((min(x,y),min(a,b)))
            ^JediEscaper:55: error: not found: value caseVoisineLaPlusProche
    temp=caseVoisineLaPlusProche(x,y)
         ^JediEscaper:70: error: not enough arguments for method indiqueLeReste: (x: Int, y: Int, cmpt: Int)Unit.
Unspecified value parameter cmpt.
  indiqueLeReste(origine,0)
                ^